# leorch

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: xor.rs
src/: autograd.rs  checkpoint.rs  cuda.rs  data.rs  distributed.rs  error.rs  functional.rs  jit.rs  lib.rs  loss.rs  mixed_precision.rs  onnx.rs  optim.rs  quantization.rs  sparse.rs  tensor.rs
src/nn/: activations.rs  embedding.rs  init.rs  layers.rs  mod.rs  norm.rs  pooling.rs  rnn.rs  transformer.rs
tests/: integration_tests.rs
