[package]
name = "leorch"
version = "0.1.0"
edition = "2021"
authors = ["Death Legion Team LK", "DEMO X HEXa"]
description = "A PyTorch-like deep learning framework in Rust"
license = "MIT"
repository = "https://github.com/deathlegionteamlk/leorch"

[dependencies]
ndarray = { version = "0.15", features = ["rayon", "serde"] }
rayon = "1.8"
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"

[[example]]
name = "xor"
path = "examples/xor.rs"

[profile.release]
opt-level = 3
lto = true
